# PrivateEconomyTracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  budget.json  expenses.json  imgui.ini  incomes.json
build_example_opengl3/binary_dir/src/: glfw3.pc
build_example_vulkan/binary_dir/src/: glfw3.pc
include/glad/: glad.h
src/: app.cpp  app.h  glad.c  main.cpp
src/budget/: budget.cpp  budget.h
src/data/: budgetData.h
src/gui/: gui.cpp  gui.h
src/model/: expense.h  income.h
src/portfolio/: richDadPoorDad.cpp  richDadPoorDad.h
src/utils/: imvec2_ops.h  numbers.h  numbersFormat.h
